crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__imports__basic_sorting.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.imports

import alpha.Alpha
import kotlin.collections.List
import zeta.Zed

class ImportSorting(val alpha: Alpha, val zed: Zed, val names: List<String>)

diagnostics:
(none)
