crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__imports__comment_barrier.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.imports

import alpha.Alpha

// Keep generated imports below this comment.
import generated.Zed
import generated.Alpha

class CommentBarrier

diagnostics:
(none)
